# permissions

./: .gitignore  Makefile  README.md  SuSEconfig.permissions  checkpermissionfiles.pl  chkstat.8  chkstat.c  meson.build  meson_options.txt  mkchanges  mktar  permissions  permissions.5  permissions.easy  permissions.local  permissions.paranoid  permissions.secure  sysconfig.security
.github/workflows/: codeql.yml
etc/: permissions  permissions.local  sysconfig.security  variables.conf
man/: chkstat.8  permctl.8  permctl.adoc  permissions.5  permissions.adoc
obs/: mkchanges  mkpackage  mktar
profiles/: permissions.easy  permissions.hardened  permissions.paranoid  permissions.restrictive  permissions.secure
rpm_macros/: macros.permissions
src/: chkstat.c  chkstat.cpp  chkstat.h  cmdline.cpp  cmdline.h  entryproc.cpp  entryproc.h  environment.h  formatting.cpp  formatting.h  permctl.cpp  permctl.h  profparser.cpp  profparser.h  types.h  utility.cpp  utility.h  varexp.cpp  varexp.h
tests/: base.py  regtest.py  tests.py
tools/: checkpermissionfiles.pl  list_permissions.py
zypper-plugin/: README.md  permissions.py
